--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       gap:14px;
       padding:10px 14px;
 
-      background: var(--hud-bg);
-      border: 1px solid var(--hud-border);
+      background: rgba(90, 0, 45, 0.42);
+      border: none;
       border-radius:999px;
       backdrop-filter: blur(10px);
       box-shadow:0 10px 30px rgba(0,0,0,0.25);
@@ -133,10 +133,10 @@
   width:0%;
 
   /* ✅ заливка тем же цветом, только плотнее */
-  background: rgba(90, 0, 45, 0.58);
+  background: rgba(90, 0, 45, 0.32);
 
   border-radius: 999px;
-  box-shadow: 0 0 14px rgba(255, 120, 175, 0.25);
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,0.10);
   transition: width .25s ease;
 }
 
