--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
     let HERO_INPUT_SPEED = 2.6;
 
     const HERO_GROWTH_PER_COLLECT = 0.05;
-    const NUM_MAIN_ITEMS = 10;
+    const NUM_MAIN_ITEMS = 11;
     const NUM_CANDIES = 3;
     const NUM_BOMBS = 2;
 
@@ -674,53 +674,64 @@
     let trailTimer = null;
 
     const TASK_CARDS = [
-`Выполните вычисления.
+`Реши задачу:
 
-45 * 2  = ____      80 : 5   = ____
-18 * 4  = ____      85 : 17  = ____
-96 : 3  = ____      58 : 29  = ____`,
+К празднику купили 24 кг груш, а яблок – на 4 кг больше.
+Сколько всего килограммов фруктов купили к празднику?`,
 
-`Решите задачу.
+`Вычисли столбиком:
 
-В цветочном магазине было 95 тюльпанов.
-Продавец сделал из них 12 букетов, по 7 тюльпанов в каждом букете.
-Сколько тюльпанов осталось?`,
+53 + 37 =        86 – 38 =
+36 + 48 =        80 – 56 =
+65 + 17 =        81 – 39 =`,
 
-`На 7 одинаковых костюмов израсходовали 28 м ткани.
-Сколько таких костюмов можно сшить из 52 м такой же ткани?`,
+`Реши уравнения:
 
-`Выполните вычисления.
+74 – х = 41
 
-48 - 32 : 4 * 5 =
-27 : (11 - 2) * 2 =`,
+30 + х = 67`,
 
-`Марина потратила половину имевшихся у нее денег,
-после чего у нее осталось 42 рубля.
-Сколько денег было у Марины?`,
+`Реши задачу:
 
-`Выполните вычисления.
+Начерти квадрат со сторонами 3 см.
+Найди периметр квадрата.`,
 
-16 * 3  = ____      90 : 5   = ____
-49 * 2  = ____      75 : 25  = ____
-84 : 4  = ____      36 : 12  = ____`,
+`Сравни, вставь знаки «<», «>» или «=»:
 
-`Решите задачу.
+3 дм 2 см __ 23 см        1 см __ 30 мм
+8 + 5 __ 14                1 ч __ 30 мин`,
 
-Стекольщику надо вставить 96 стекол.
-Он уже вставил стекла в 14 окон, по 3 стекла в каждое.
-Сколько стекол ему осталось вставить?`,
+`Вставь числа так, чтобы записи были верными:
 
-`На 5 одинаковых пальто расходуют 15 м ткани.
-Сколько таких пальто можно сшить из 42 м такой же ткани?`,
+5 м 8 дм = ___ дм        60 мм = ___ см
+6 дм 3 см = ___ см       50 мм = ___ см`,
 
-`Выполните вычисления.
+`Реши задачу:
 
-32 + 8 * 5 : 4 =
-(84 - 20) : 8 * 7 =`,
+Школьники посадили 14 тюльпанов, а ромашек на 6 меньше.
+Сколько всего цветов посадили школьники?`,
 
-`Длина всех сторон шестиугольника равна.
-Его периметр 18 см.
-Чему равна длина одной его стороны?`
+`Вычисли столбиком:
+
+26 + 47 =        81 – 25 =
+44 + 36 =        70 – 27 =
+69 + 17 =        41 – 29 =`,
+
+`Реши уравнения:
+
+х + 40 = 59
+
+х – 17 = 33`,
+
+`Реши задачу:
+
+Начерти квадрат со сторонами 6 см.
+Найди периметр квадрата.`,
+
+`Сравни, вставь знаки «<», «>» или «=»:
+
+4 см 2 мм __ 24 мм        1 м __ 100 см
+7 + 4 __ 19                59 мин __ 1 ч`
     ];
 
     /* ===== ЗВУКИ (WebAudio) ===== */
@@ -1145,7 +1156,7 @@
         ? TASK_CARDS[taskIndex % TASK_CARDS.length]
         : "Добавь задания в массив TASK_CARDS";
 
-      modalQuestionEl.classList.toggle('mono', [0,5].includes(taskIndex));
+      modalQuestionEl.classList.toggle('mono', [1, 2, 4, 5, 7, 8, 10].includes(taskIndex));
       modalQuestionEl.textContent = txt;
 
       modalOpen = true;
